--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 clap = "3.0.0-beta.2"
 toml = "0.5.8"
 uuid = "0.8.2"
+git2 = "0.13.20"
 
 [dependencies.serde]
 version = "1.0.126"
